--- a/index.css
+++ b/index.css
@@ -4,16 +4,41 @@
     box-sizing: border-box;
 }
 
+/* body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+    background-color: aqua;
+} */
+
 .container {
-    background-color: rgb(255, 255, 255);
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+    margin: 2rem auto;
 }
 
-img {    
+img {
     max-width: 90%;
     height: auto;
+}
+
+@media only screen and (min-width: 900px) {
+    img {
+        width: auto;
+        height: 80%;
+    }
+
+    .container {
+        width: 90%;
+    }
+}
+
+@media only screen and (max-width: 1840px) {
+    img {
+        max-width: 95%;
+    }
 }
